[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "classad"
author = "Eileen Kuehn, Max Fischer"
author-email = "mainekuehn@gmail.com"
home-page = "https://github.com/MaineKuehn/classad"
description-file = "README.rst"
keywords = "htcondor classad python"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.metadata.requires-extra]
doc = ["sphinx", "sphinx_rtd_theme", "sphinxcontrib-contentui"]

[tool.flit.metadata.urls]
Documentation = "https://classad.readthedocs.io/en/latest/"
