[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "classad"
author = "Eileen Kuehn, Max Fischer"
author-email = "mainekuehn@gmail.com"
home-page = "https://github.com/MaineKuehn/classad"
description-file = "README.rst"
keywords = "htcondor classad python"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "pyparsing ~= 2.4.2"
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=4.3.0",
    "flake8",
    "flake8-bugbear",
]
doc = ["sphinx", "sphinx_rtd_theme", "sphinxcontrib-contentui"]
dev = ["pre-commit"]

[tool.flit.metadata.urls]
Documentation = "https://classad.readthedocs.io/en/latest/"
